# snoyberg.github.io-old

./: 2015-08-30-tel-aviv-haskell-in-enterprise.html  README.md  decks.yaml  index.html  stack.yaml  template.hamlet
slides/: slides.cabal
slides/src/: Main.hs
snippets/: adopting.hamlet  questions.hamlet  strengths-weaknesses-myths.hamlet  who-am-i.hamlet  who-uses-haskell.hamlet  why-use-haskell.hamlet
snippets/twitter-2015/: abstractions.hamlet  concurrency.hamlet  getting-started.hamlet  goodness.hamlet  overview.hamlet  robust.hamlet  single-core-performance.hamlet  what-is-haskell.hamlet
