name:                slides
version:             0.1.0.0
synopsis:            Generate slides
license:             BSD3
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable slides
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , classy-prelude
                     , directory
                     , filepath
                     , shakespeare
                     , yaml
